--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,7 @@ body {
 
 @layer base {
   * {
-    @apply border-border;
+    @apply  border-orange-400;
   }
   body {
     @apply bg-background text-foreground;
